--- a/photos.html
+++ b/photos.html
@@ -77,6 +77,7 @@
         <table style="width: 100%">
 			<tr>
 				<td>
+				<p><a href="yearend19.html">2019 Award Ceremony (5.18.2019)</a></p>
 				<p><a href="xmas18.html">2018 Holiday Party (12.15.2018)</a></p>
 				<p><a href="yearend18.html">2018 Award Ceremony (5.19.2018)</a></p>
 				<p><a href="xmas17.html">2017 Holiday Party (12.16.2017)</a></p>
