--- a/documents.html
+++ b/documents.html
@@ -64,18 +64,18 @@
       <h1>Documents<span style="font-family: TSC UKai M TT">
 		&#25991;&#20214;</span></h1>
      <ul><li>
-		<a target="_blank" href="docs/Tutoring%20Brochure%202018-2019.pdf">Brochure of 
+		<a target="_blank" href="docs/2019/Tutoring%20Brochure%202019-2020.pptx">Brochure of 
 		Tutoring Program</a><br />
 		<br />
 		</li>
 <li>
-<a target="_blank" href="docs/Coord%20Guidelines%20Job%20Desc%202018.pdf">Coordinator Guidelines 
+<a target="_blank" href="docs/2019/Coord%20Guidelines%20Job%20Desc%202019.docx">Coordinator Guidelines 
 &amp; Job Description</a><br />
 <br />
 		</li>
 <li><a target="_blank" href="docs/Tutor_Guidelines_2018.pdf">Tutor Guidelines</a><br />
 <br /></li>
-<li><a target="_blank" href="docs/Tutee_Guidelines_2018.pdf">Tutee Guidelines (English  
+<li><a target="_blank" href="docs/2019/Tutee_Guidelines_2019.docx">Tutee Guidelines (English  
 &amp; Chinese)</a></li>
 </ul>
 		<p>&nbsp;</p>
@@ -87,12 +87,11 @@
 		<br />
 		</li>
 		<li>
-		<a target="_blank" href="docs/Tutor%20Application%20Form%202012.pdf">Tutor Application</a><br />
+		<a target="_blank" href="docs/2019/Tutor%20Application%20Form%20%202019.doc">Tutor Application</a><br />
 		<br />
 		</li>
-		<li><a target="_blank" href="docs/Tutee%20Application%202018.pdf">K-12 Tutee Application</a><br />
-		<br />
-		</li>
+		 <li><a target="_blank" href="docs/2019/Tutee%20Application%202019.pdf">K-12 Tutee Application</a><br />
+		 <br /></li>
 		</ul>
 		<p>&nbsp;</p>
 		<h1>Training Material <span style="font-family: TSC UKai M TT">&#22521;&#35347;&#36039;&#26009;</span></h1>
