change index page

--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
 
 <p class="MsoNormal">
 <strong>Line 
-Dance Class</strong> &#9472; Line Dance summer classes are held on Saturdays 
-between May 25 and August 3 at the gym 
+Dance Class</strong> &#9472; Line Dance summer classes are held on every Saturdays at the gym 
 in Robert Frost Middle School from 9 AM to noon. &nbsp;All are welcome!&nbsp; For more information, please contact Ms. Carol Hsieh at 240-418-5663 or <a href="mailto:chsieh5678@yahoo.com">
 chsieh5678@yahoo.com</a>.<o:p></o:p></p>
 <p><span class="style21"><b>
@@ -222,10 +221,7 @@ ZH-TW"> </span></span></b></span>
 mso-fareast-language:ZH-TW">&#9472; </span>
 </span><font size="3">
 <span lang="ZH-TW" style="line-height: 115%; font-family: DFKai-SB; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style31">
-&#25490;&#33310;&#29677;</span></font><span style="font-size:12.0pt;font-family:DFKai-SB;
-mso-ascii-font-family:&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;
-mso-bidi-font-family:&quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:
-EN-US;mso-bidi-language:AR-SA">&#26044;</span><font size="3"><span lang="ZH-TW" style="line-height: 115%; font-family: DFKai-SB; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style31">&#20116;&#26376;&#20108;&#21313;&#20116;&#26085;&#33267;&#20843;&#26376;&#19977;&#26085;&#65292;&#36898;&#26143;&#26399;&#20845;&#19978;&#21320;&#20061;&#26178;&#33267;&#20013;&#21320;&#21313;&#20108;&#26178;&#20551;&#20315;&#27931;&#26031;&#29305;&#21021;&#20013;&#39636;&#32946;&#39208;&#38283;&#29677;&#12290;&#22320;&#22336;&#26159;</span></font><span lang="ZH-TW" style="line-height: 115%; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style32">
+&#25490;&#33310;&#29677;</span></font><font size="3"><span lang="ZH-TW" style="line-height: 115%; font-family: DFKai-SB; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style31">&#36898;&#26143;&#26399;&#20845;&#19978;&#21320;&#20061;&#26178;&#33267;&#20013;&#21320;&#21313;&#20108;&#26178;&#20551;&#20315;&#27931;&#26031;&#29305;&#21021;&#20013;&#39636;&#32946;&#39208;&#38283;&#29677;&#12290;&#22320;&#22336;&#26159;</span></font><span lang="ZH-TW" style="line-height: 115%; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style32">
 </span>
 <span style="line-height: 115%; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style32">
 9201 Scott Drive, Rockville, MD 20850 </span><font size="3">
@@ -245,93 +241,33 @@ chsieh5678@yahoo.com </span>
 <span style="mso-fareast-font-family: PMingLiU; mso-font-kerning: 1.0pt; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style19">
 Tutoring Program </span></strong>
 <span style="mso-fareast-font-family: PMingLiU; mso-font-kerning: 1.0pt; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style27">
-&#9472; </span><span style="mso-fareast-font-family:DFKai-SB">The program for 
-school year 2018-19 ended on May 1<span lang="en-us">8</span>, 2019.&nbsp; 
-Effective June <span class="style19">2019, Mr. Zhendong Chen will be the 
-president and program director of CAPSA.&nbsp; Tutors and tutees who</span></span><span style="mso-fareast-font-family: DFKai-SB; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style27"> 
-have already pre-registered for the program for next school year may  
-attend the first tutoring session on September 14, 2019.<span style="mso-spacerun:yes">&nbsp;
-</span>New tutors and tutees can apply to join the program on the registration 
-day on September 7, 2019 between 10 am to 12 noon at Robert Frost Middle School.<span style="mso-spacerun:yes">&nbsp;
-</span>For more information, please contact Mr. Zengdong Chen at 
-capsa.mcmd@gmail.com or (301) 686-4237.</span></p>
+&#9472; </span>
+<span style="mso-fareast-font-family: DFKai-SB; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style27"> 
+<span style="mso-spacerun:yes">&nbsp;</span>New tutors and tutees can apply to join the program between 10 am to 12 noon at Robert Frost Middle School 
+in person.<span style="mso-spacerun:yes">&nbsp;
+</span>For more information, please contact Mr. Zhendong Chen at 
+<span lang="ZH-TW" style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;
+mso-fareast-font-family:DFKai-SB;mso-ansi-language:EN-US;mso-fareast-language:
+ZH-TW;mso-bidi-language:AR-SA"> &nbsp;</span><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;
+mso-fareast-font-family:DFKai-SB;mso-ansi-language:EN-US;mso-fareast-language:
+ZH-TW;mso-bidi-language:AR-SA">president@capsa-mc.org</span> or (301) 686-4237.</span></p>
 <p class="style24">
 <span lang="ZH-TW" style="font-family: &quot;TSC UKai M TT&quot;; mso-hansi-font-family: Arial; mso-bidi-font-family: Arial; mso-font-kerning: 1.0pt; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style29">
 <strong>&#35506;&#26989;&#36628;&#23566;</strong></span><strong><span style="mso-fareast-font-family: PMingLiU; mso-font-kerning: 1.0pt; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style30">
 </span></strong>
 <span style="mso-fareast-font-family: PMingLiU; mso-font-kerning: 1.0pt; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style30">
 &#9472; </span>
-<span style="font-size:12.0pt;font-family:DFKai-SB;
-mso-ascii-font-family:&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;
-mso-bidi-font-family:&quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:
-EN-US;mso-bidi-language:AR-SA">&#26412;&#23416;&#24180;&#35506;&#26989;&#36628;&#23566;&#26044;</span><font size="3"><span lang="ZH-TW" style="line-height: 115%; font-family: DFKai-SB; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style31">&#20116;&#26376;&#21313;&#20843;&#26085;</span></font><span style="font-size:12.0pt;font-family:DFKai-SB;
-mso-ascii-font-family:&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;
-mso-bidi-font-family:&quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:
-EN-US;mso-bidi-language:AR-SA">&#32080;&#26989;&#20856;&#31150;&#24460;&#23436;&#28415;&#32080;&#26463;&#12290;</span><span lang="ZH-TW" style="font-size:12.0pt;font-family:DFKai-SB;mso-ascii-font-family:&quot;Times New Roman&quot;;
-mso-hansi-font-family:&quot;Times New Roman&quot;;mso-bidi-font-family:&quot;Times New Roman&quot;;
-mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA">&#24863;&#35613;&#22823;&#23478;&#21443;&#33287;&#21644;&#25903;&#25345;</span><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:
-DFKai-SB;mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:
-AR-SA">CAPSA</span><span lang="ZH-TW" style="font-size:12.0pt;font-family:DFKai-SB;
-mso-ascii-font-family:&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;
-mso-bidi-font-family:&quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:
-ZH-TW;mso-bidi-language:AR-SA">&#35506;&#26989;&#36628;&#23566;&#12290;&#38515;&#38663;&#26481;&#32769;&#24107;&#23559;&#26044;&#20845;&#26376;&#36215;&#27491;&#24335;&#25509;&#20219;&#26412;&#26371;&#26371;&#38263;&#21644;&#35506;&#26989;&#36628;&#23566;&#20027;&#20219;&#32887;&#21209;&#12290;&#24050;&#36774;&#29702;&#19979;&#23416;&#24180;&#35506;&#26989;&#36628;&#23566;&#20778;&#20808;&#35387;&#20874;&#30340;&#23416;&#29983;&#21644;&#23567;&#32769;&#24107;&#65292;&#35531;&#26044;</span><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:
-DFKai-SB;mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:
-AR-SA">2019</span><span lang="ZH-TW" style="font-size:12.0pt;font-family:DFKai-SB;
-mso-ascii-font-family:&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;
-mso-bidi-font-family:&quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:
-ZH-TW;mso-bidi-language:AR-SA">&#24180;</span><span style="font-size:12.0pt;
-font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:DFKai-SB;
-mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA">9</span><span lang="ZH-TW" style="font-size:12.0pt;font-family:DFKai-SB;mso-ascii-font-family:
-&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;mso-bidi-font-family:
-&quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;
-mso-bidi-language:AR-SA">&#26376;</span><span style="font-size:12.0pt;font-family:
-&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:DFKai-SB;mso-ansi-language:
-EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA">14</span><span lang="ZH-TW" style="font-size:12.0pt;font-family:DFKai-SB;mso-ascii-font-family:
-&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;mso-bidi-font-family:
-&quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;
-mso-bidi-language:AR-SA">&#26085;</span><span style="font-size:12.0pt;font-family:
-&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:DFKai-SB;mso-ansi-language:
-EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA"> (</span><span lang="ZH-TW" style="font-size:12.0pt;font-family:DFKai-SB;mso-ascii-font-family:
-&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;mso-bidi-font-family:
-&quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;
-mso-bidi-language:AR-SA">&#26143;&#26399;&#20845;</span><span style="font-size:12.0pt;font-family:
-&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:DFKai-SB;mso-ansi-language:
-EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA">) </span>
-<span lang="ZH-TW" style="font-size:12.0pt;font-family:DFKai-SB;mso-ascii-font-family:
-&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;mso-bidi-font-family:
-&quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;
-mso-bidi-language:AR-SA">&#19978;&#21320;&#21313;&#26178;&#21040;&#20315;&#27931;&#26031;&#29305;&#21021;&#20013;</span><span lang="ZH-TW" style="font-size:
-12.0pt;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:DFKai-SB;
-mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA">
-</span>
-<span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:
-DFKai-SB;mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:
-AR-SA">(Robert Forest Middle School) </span>
 <span lang="ZH-TW" style="font-size:
 12.0pt;font-family:DFKai-SB;mso-ascii-font-family:&quot;Times New Roman&quot;;mso-hansi-font-family:
 &quot;Times New Roman&quot;;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-ansi-language:
 EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA">
-&#27491;&#24335;&#19978;&#35506;&#12290;&#26377;&#24847;&#21443;&#21152;&#23567;&#32769;&#24107;&#24037;&#20316;&#25110;&#25509;&#21463;&#36628;&#23566;&#30340;&#21516;&#23416;&#65292;&#21487;&#26044;&#26412;&#24180;</span><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:
-DFKai-SB;mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:
-AR-SA">9</span><span lang="ZH-TW" style="font-size:12.0pt;font-family:DFKai-SB;
-mso-ascii-font-family:&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;
-mso-bidi-font-family:&quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:
-ZH-TW;mso-bidi-language:AR-SA">&#26376;</span><span style="font-size:12.0pt;
-font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:DFKai-SB;
-mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA">7</span><span lang="ZH-TW" style="font-size:12.0pt;font-family:DFKai-SB;mso-ascii-font-family:
+&#26377;&#24847;&#21443;&#21152;&#23567;&#32769;&#24107;&#24037;&#20316;&#25110;&#25509;&#21463;&#36628;&#23566;&#30340;&#21516;&#23416;&#65292;&#21487;&#26044;</span><span style="font-size:12.0pt;font-family:DFKai-SB;mso-ascii-font-family:
 &quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;mso-bidi-font-family:
 &quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;
-mso-bidi-language:AR-SA">&#26085;</span><span style="font-size:12.0pt;font-family:
-&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:DFKai-SB;mso-ansi-language:
-EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA">(</span><span lang="ZH-TW" style="font-size:12.0pt;font-family:DFKai-SB;mso-ascii-font-family:
+mso-bidi-language:AR-SA">&#27599;&#21608;</span><span lang="ZH-TW" style="font-size:12.0pt;font-family:DFKai-SB;mso-ascii-font-family:
 &quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;mso-bidi-font-family:
 &quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;
-mso-bidi-language:AR-SA">&#26143;&#26399;&#20845;</span><span style="font-size:12.0pt;font-family:
-&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:DFKai-SB;mso-ansi-language:
-EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA">)</span><span lang="ZH-TW" style="font-size:12.0pt;font-family:DFKai-SB;mso-ascii-font-family:
-&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;mso-bidi-font-family:
-&quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;
-mso-bidi-language:AR-SA">&#19978;&#21320;&#21313;&#26178;&#33267;&#20013;&#21320;&#21313;&#20108;&#26178;&#65104;&#35242;&#33256;&#20315;&#27931;&#26031;&#29305;&#21021;&#20013;&#36774;&#29702;&#26032;&#23416;&#24180;&#35387;&#20874;&#12290;&#35443;&#24773;&#35531;&#33268;&#38651;&#38515;&#38663;&#26481;&#32769;&#24107;</span><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:
+mso-bidi-language:AR-SA">&#19978;&#21320;&#21313;&#26178;&#33267;&#20013;&#21320;&#21313;&#20108;&#26178;&#65104;&#35242;&#33256;&#20315;&#27931;&#26031;&#29305;&#21021;&#20013;&#36774;&#29702;&#35387;&#20874;&#12290;&#35443;&#24773;&#35531;&#33268;&#38651;&#38515;&#38663;&#26481;&#32769;&#24107;</span><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:
 DFKai-SB;mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:
 AR-SA"> (301) 686-4237 </span>
 <span lang="ZH-TW" style="font-size:12.0pt;
@@ -340,10 +276,12 @@ font-family:DFKai-SB;mso-ascii-font-family:&quot;Times New Roman&quot;;mso-hansi
 EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA">&#25110;&#38651;&#37109;</span><span lang="ZH-TW" style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;
 mso-fareast-font-family:DFKai-SB;mso-ansi-language:EN-US;mso-fareast-language:
 ZH-TW;mso-bidi-language:AR-SA"> </span>
-<span style="font-size:12.0pt;
+<span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;
+mso-fareast-font-family:DFKai-SB;mso-ansi-language:EN-US;mso-fareast-language:
+ZH-TW;mso-bidi-language:AR-SA"> president@capsa-mc.org</span><span style="font-size:12.0pt;
 font-family:&quot;Times New Roman&quot;,&quot;serif&quot;;mso-fareast-font-family:DFKai-SB;
 mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA">
-capsa.mcmd@gmail.com </span>
+</span>
 <span lang="ZH-TW" style="font-size:12.0pt;font-family:DFKai-SB;
 mso-ascii-font-family:&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;
 mso-bidi-font-family:&quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:
