change people page

--- a/people.html
+++ b/people.html
@@ -67,6 +67,16 @@
 	font-family: DFKai-SB;
 	font-size: 5.46509e+019;
 }
+.auto-style1 {
+	background-repeat: repeat;
+}
+.auto-style2 {
+	background-color: #FFFFFF;
+	background-repeat: repeat-y;
+}
+.auto-style3 {
+	margin-left: 80px;
+}
 </style>
 
 
@@ -170,9 +180,7 @@ mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA" clas
 		</span> <span class="style17"
 >
 		·|ªø</span></h1>
-		<span class="style12">Aldrin Leung </span> 
-			<span class="style18"
->±ç°¶®Ú</span><br/>
+		<span class="style12">Zhendong Chen ³¯¾_ªF</span><br/>
 		<br />
 		<hr style="color: #89A9C7;"/>
 		<h1 style="border-bottom-color:#FFFFFF"><span class="style12">Treasurer 
@@ -195,131 +203,86 @@ mso-hansi-font-family:&quot;Times New Roman&quot;;mso-bidi-font-family:&quot;Tim
 mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA" class="style17">
 		¼B§µÁ¢</span></span></span></p>
 		<h2 class="style2"><strong>Deputy Director of Registration</strong></h2>
-		<p class="style2">Mingliang Tan
-		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA">
-		<span class="style22">ÃÓ©ú«G</span></span></p>
+		<p class="style2">Xiaoning He&nbsp; ¦ó¤p¹ç</p>
 		</span>
-<h2 class="style2"><strong>Program Secretary</strong></h2>
-		<p class="style2">Betty Ho 
-		<span class="style18">¦ó§öªÚ</span></p>
 		<h2 class="style2"><span class="style12"><strong>Line Dance Instructor</strong></h2>
 		<p class="style2">Carol Hsieh 
 		</span> 
 		<span class="style18"
 >ÁÂ°û&#23190;</span></p>
 		<h2 class="style2"><strong><span lang="zh-tw" class="style12">M</span><span class="style12">onitor / Registrar / 
-Cashiers</span></strong><span class="style12"></h2>
-		<p class="style2">Meizhen Hou
-		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style18">
-		«J¬ü¬Ã</span><span lang="ZH-TW" style="font-size: 11.0pt; line-height: 115%; mso-bidi-font-family: PMingLiU; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style12">¡B</span>Ping 
-		Li
-		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style18">
-		§õ¼sµÓ</span><span lang="ZH-TW" style="font-size: 11.0pt; line-height: 115%; mso-bidi-font-family: PMingLiU; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style12">¡B</span>Dongliang 
-		Liu
-		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style18">
-		¼B´É±ç</span><span class="style12"><span lang="ZH-TW" style="font-size: 11.0pt; line-height: 115%; mso-bidi-font-family: PMingLiU; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style12">¡B</span>Karry Wei 
-			</span><span class="style18"
->ÃQ¯ô</span> and Minshen Zhang
-		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style18">
-		±i»Ô¥Ó</span></span></p>
+Cashiers</span></strong></h2>
+		<p class="style2">Group A:&nbsp; Qunxiu Zhu, Qing Song, Xia Chen, </p>
+		<p class="style2">Group B:&nbsp; Jennifer Yu, Yisha Yao, ShaoJian Gao, 
+		Dongliang Liu</p>
 		<h2 class="style2"><span class="style12"><strong>Mentors &amp; Coordinators</strong></h2>
 		<h2 class="style8">&nbsp;</h2>
 		<h2 class="style8"><strong>High School Group:</strong></h2>
 
       <ul class="style8">
-        <li> Mentor, 
-		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style12">
-		<span class="style12">Christine Yu </span>
-		<span lang="zh-tw" class="style18">¸·¤è</span></span></span></li>
-		<span class="style12">
-		<li> Lead Coordinator<span lang="FR" style="line-height: 115%; mso-fareast-font-family: PMingLiU; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style11">, 
-		<span class="style12">Joanna Hung </span>
-		<span lang="ZH-TW" style="mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style17">
-		<span class="style15">¬x©ý®®</span></span></span></li>
-		<li> Coordinator, Justin Zhang </span><span class="style18">±i¶hµ¾</li></span></ul>
+        <li> <span class="style12">Minshen Zhang
+		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style18">
+		±i»Ô¥Ó</span></span><li> Lead Coordinator<span lang="FR" style="line-height: 115%; mso-fareast-font-family: PMingLiU; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style11">, 
+		</span>
+		  <span style="line-height: 115%; mso-fareast-font-family: PMingLiU; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style11">
+		  Justin Zhang <span class="style18">±i¶hµ¾</span></span></li>
+		  <li> Coordinator, </span>Harry Song</li>
+		  <li> <span class="style12">Coordinator, </span>Michael Chen</li>
+		</ul>
 		<span class="style12">
 		<h2 class="style8">	&nbsp;</h2>
 		<h2 class="style8">	<strong>Middle School Group: </strong> </h2>
       	</strong>
       <ul class="style8">
-        <li> Mentor, <span lang="zh-tw"><span class="style12">Zheng Dong </span>
-		<span lang="ZH-TW" style="line-height:
-115%;mso-ascii-font-family:&quot;Times New Roman&quot;;
-mso-hansi-font-family:&quot;Times New Roman&quot;;mso-bidi-font-family:&quot;Times New Roman&quot;;
-mso-ansi-language:FR;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA" class="style19">
-		<span lang="ZH-TW" style="line-height:115%;mso-ascii-font-family:&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;
-mso-bidi-font-family:&quot;Times New Roman&quot;;mso-ansi-language:FR;mso-fareast-language:
-ZH-TW;mso-bidi-language:AR-SA" class="style17">¸³©º</span></span></span></span></li>
+        <li> Mentor, <span class="auto-style1">Mingliang Tan
+		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA">
+		<span class="style22">ÃÓ©ú«G</span></span></span></span></li>
         <li><span class="style12">Lead Coordinator,  
-		<span style="line-height: 115%; mso-fareast-font-family: PMingLiU; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
-		<span style="line-height: 115%; mso-hansi-font-family: SimSun; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
-		<span lang="FR" style="line-height: 115%; mso-fareast-font-family: PMingLiU; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style11">
-		Elaine Han <span style='font-family:"TSC UKai M TT"'>
-		<span lang="ZH-TW" style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: FR; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style17">
-		<span class="style15">Áú¨ÌµY</span></span></span></span></span></span></span></li>
-		<li><span class="style12">Coordinator, 
 		Steven Tan <span style='font-family:"TSC UKai M TT"'>
 		<span style="line-height: 115%; font-family: &quot;TSC UKai M TT&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
 		<span class="style17">
 		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: FR; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA">
 		<span class="style21">ÃÓ«ä¬°</span></span></span></span></span></span></li>
 		<li><span class="style12">Coordinator, 
-		<span style="line-height: 115%; mso-hansi-font-family: SimSun; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
-		<span lang="FR" style="line-height: 115%; mso-fareast-font-family: PMingLiU; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style11">
-		K<span lang="en-us">ayden Fu</span></span></span><span style='font-family:"TSC UKai M TT"'><span style="line-height: 115%; font-family: &quot;TSC UKai M TT&quot;; mso-hansi-font-family: SimSun; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><span class="style10"><span lang="FR" style="line-height: 115%; mso-fareast-font-family: PMingLiU; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style13"><span style="mso-tab-count:1">
-		</span></span>
-		<span style="line-height: 115%; font-family: &quot;TSC UKai M TT&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
-		<span lang="ZH-TW" style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: FR; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style18">
-		³Å»_»_</span></span></span></span></span><strong><br />
+		Tina Liu
+		<span lang="ZH-TW" style="mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style17">
+		<span class="style15">¼B¤pà±</span></span></span></li>
+		<li><span class="style12">Coordinator, 
+		<span class="auto-style2">Yuyu Yang</span><strong><br />
 		<br />
 		</li>
       </ul>
       <h2 class="style8"><strong>Upper Elementary School Group: </strong> </h2>
       	</strong>
       <ul class="style8">
-        <li> Mentor,  
-		Lily Tsai </span>
-		<span lang="ZH-TW" style="line-height:
-115%;mso-ascii-font-family:&quot;Times New Roman&quot;;
-mso-hansi-font-family:&quot;Times New Roman&quot;;mso-bidi-font-family:&quot;Times New Roman&quot;;
-mso-ansi-language:FR;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA" class="style19">
-		<span lang="ZH-TW" style="line-height:115%;mso-ascii-font-family:&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;
-mso-bidi-font-family:&quot;Times New Roman&quot;;mso-ansi-language:FR;mso-fareast-language:
-ZH-TW;mso-bidi-language:AR-SA" class="style17">½²ªÃÞ³</span></span></li>
+        <li> Mentor, Ping 
+		Li
+		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style18">
+		§õ¼sµÓ</span></span></li>
         <li><span class="style12">Lead Coordinator, 
-		<span style="line-height: 115%; mso-hansi-font-family: SimSun; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
-		<span style="line-height: 115%; mso-fareast-font-family: PMingLiU; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style11">
-		Samuel Chen </span></span><span style='font-family:"TSC UKai M TT"'>
-		<span style="line-height: 115%; font-family: &quot;TSC UKai M TT&quot;; mso-hansi-font-family: SimSun; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
-		<span style="line-height: 115%; font-family: &quot;TSC UKai M TT&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
-		<span class="style15">
-		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: FR; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA">
-		³¯«a¿«</span></span></span></span></span></span></li>
-        <li><span class="style12">Coordinator, Tina Liu
-		<span lang="ZH-TW" style="mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style17">
-		<span class="style15">¼B¤pà±</span></span></span></li>
-        <li><span class="style12">Coordinator, Shelton Zhou </span>
-		<span class="style18">©P²»¥ò</span><span class="style12"><strong><br />
-          <br />
-        </li>
-      </ul>
-      <h2 class="style8"><strong>Lower Elementary School Group: </strong> </h2>
-      	</strong></strong>
-      <ul class="style8">
-        <li> Mentor, Jenny Loh<span class="style12"><span style="line-height: 115%; mso-hansi-font-family: SimSun; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><span style="line-height: 115%; mso-fareast-font-family: PMingLiU; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style11">
-		</span></span><span style='font-family:"TSC UKai M TT"'>
-		<span style="line-height: 115%; font-family: &quot;TSC UKai M TT&quot;; mso-hansi-font-family: SimSun; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
-		<span style="line-height: 115%; font-family: &quot;TSC UKai M TT&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
-		<span class="style15">
-		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: FR; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA">
-		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA">
-		<span lang="zh-tw" class="style18">Ã¹ÒP®S</span></span></span></span></span></span></span></span></li>
-        <li>Lead Coordinator, Winni Chen </span>
-		<span lang="ZH-TW" style="mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style18">
-		³¯½«©É</span></li>
-        <li><span class="style12">Coordinator, Kenny Cheung </span>
+		Kenny Cheung </span>
 		<span lang="ZH-TW" style="mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style17">
 		<span class="style15">±i¹ÅÂ@</span></span></li>
+        <li><span class="style12">Coordinator, Allen Liu</span></li>
+        <li><span class="style12">Coordinator, Kyle Lee</span></li>
+		  <span class="style12"><strong>
+      </ul>
+      <h2 class="style8">&nbsp;</h2>
+		<h2 class="auto-style3">Lower Elementary School Group: </h2>
+      	</strong></strong>
+      <ul class="style8">
+        <li> Mentor, <span class="style12">Meizhen Hou
+		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style18">
+		«J¬ü¬Ã</span></span></li>
+        <li>Lead Coordinator,&nbsp; 
+		<span style="line-height: 115%; mso-hansi-font-family: SimSun; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
+		<span lang="FR" style="line-height: 115%; mso-fareast-font-family: PMingLiU; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style11">
+		K<span lang="en-us">ayden Fu</span></span></span><span style='font-family:"TSC UKai M TT"'><span style="line-height: 115%; font-family: &quot;TSC UKai M TT&quot;; mso-hansi-font-family: SimSun; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><span class="style10"><span lang="FR" style="line-height: 115%; mso-fareast-font-family: PMingLiU; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style13"><span style="mso-tab-count:1">
+		</span></span>
+		<span style="line-height: 115%; font-family: &quot;TSC UKai M TT&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
+		<span lang="ZH-TW" style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: FR; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style18">
+		³Å»_»_</span></span></span></span></span></span></li>
+        <li><span class="style12">Coordinator, Elaine Gao</span></li>
       </ul>
 		<strong>
 		<p>&nbsp;</p>
