--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,9 @@
 body,td,th {
 	font-size: 0.68em;
 }
+    .auto-style1 {
+	background-repeat: repeat;
+}
     </style>
 
 
@@ -95,7 +98,7 @@ Arial;color:#5A6370;mso-fareast-language:ZH-TW"><o:p></o:p></span></b></h2>
 		Mr. Zhendong Chen
 		<span style="color: rgb(90, 99, 112); font-family: DFKai-SB; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
 		陳震東</span>: (301) 
-		686-4237 or <a href="mailto:capsa.mcmd@gmail.com">capsa.mcmd@gmail.com</a><br />
+		686-4237 or <a href="mailto:capsa.mcmd@gmail.com">p<span class="auto-style1">resident@capsa</span></a>-mc.org<br />
 		</p>
         <h1>Donations
 	  <span style='font-family:"TSC UKai M TT"'>&#25424;&#36104;</span></h1>
