--- a/documents.html
+++ b/documents.html
@@ -96,7 +96,7 @@
 		<p>&nbsp;</p>
 		<h1>Training Material <span style="font-family: TSC UKai M TT">&#22521;&#35347;&#36039;&#26009;</span></h1>
 <ul>
-  	<li><a target="_blank" href="docs/2019%20Tutor%20Training.pdf">Tutor Training</a><br />
+  	<li><a target="_blank" href="docs/2019/2019-Tutor-Training.pdf">Tutor Training</a><br />
 	<br />
 	</li>
   	<li>
